--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -45,5 +45,6 @@ security:
     access_control:
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/v1/users/create, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api/v1, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/api/v1/^, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/api/v1, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         
