--- a/api/app.json
+++ b/api/app.json
@@ -1,5 +1,5 @@
 {
-    "success_url": "/",
+    "success_url": "/api/v1",
     "env": {
       "APP_ENV": "prod",
       "APP_SECRET": {"generator": "secret"},
