--- a/api/app.json
+++ b/api/app.json
@@ -1,9 +1,9 @@
 {
-    "success_url": "/api/v1",
+    "success_url": "/",
     "env": {
       "APP_ENV": "prod",
       "APP_SECRET": {"generator": "secret"},
-      "CORS_ALLOW_ORIGIN": "https://front-apiapp.herokuapp.com/"
+      "CORS_ALLOW_ORIGIN": "*"
     },
     "addons": [
       "heroku-postgresql"
