--- a/api/composer.json
+++ b/api/composer.json
@@ -31,18 +31,18 @@
         "symfony/serializer": "5.1.*",
         "symfony/twig-bundle": "5.1.*",
         "symfony/validator": "5.1.*",
-        "symfony/yaml": "5.1.*"
+        "symfony/yaml": "5.1.*",
+        "symfony/debug-bundle": "^5.1",
+        "symfony/maker-bundle": "^1.21",
+        "symfony/web-profiler-bundle": "^5.1"
     },
     "require-dev": {
         "api-platform/schema-generator": "^2.2",
         "symfony/browser-kit": "^5.1",
         "symfony/css-selector": "^5.1",
-        "symfony/debug-bundle": "^5.1",
-        "symfony/maker-bundle": "^1.21",
         "symfony/phpunit-bridge": "^5.1",
         "symfony/stopwatch": "^5.1",
-        "symfony/var-dumper": "^5.1",
-        "symfony/web-profiler-bundle": "^5.1"
+        "symfony/var-dumper": "^5.1"
     },
     "config": {
         "optimize-autoloader": true,
@@ -77,7 +77,14 @@
             "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd"
         },
-        "post-install-cmd": [],
+        "post-install-cmd": [
+            "@auto-scripts",
+            "chmod -R 777 public/",
+            "chmod -R 777 config/",
+            "mkdir -p config/jwt",
+            "openssl genrsa -out config/jwt/private.pem 4096",
+            "openssl rsa -pubout -in config/jwt/private.pem -out config/jwt/public.pem"
+        ],
         "post-update-cmd": [
             "@auto-scripts"
         ]
