--- a/api/.env
+++ b/api/.env
@@ -21,7 +21,7 @@ VARNISH_URL=http://cache-proxy
 APP_ENV=dev
 APP_SECRET=!ChangeMe!
 TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
-TRUSTED_HOSTS='^(localhost|api|api-platform-esgi.herokuapp.com)$'
+TRUSTED_HOSTS='^(localhost|api|api-plat.herokuapp.com)$'
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -29,7 +29,7 @@ TRUSTED_HOSTS='^(localhost|api|api-platform-esgi.herokuapp.com)$'
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a MySQL database, use: "mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=postgresql-asymmetrical-77027
+DATABASE_URL=postgresql-crystalline-05715
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
