--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -12,27 +12,21 @@ security:
                 property: email
     firewalls:
         dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
+            pattern: ^/_(profiler|wdt)
             security: false
-
-        api:
-            pattern:   ^/api/v1
-            provider: app_user_provider
+        main:
             stateless: true
             anonymous: true
-            guard:
-                authenticators:
-                    - lexik_jwt_authentication.jwt_token_authenticator
-
-        main:
-            anonymous: true
-            lazy: true
+            provider: app_user_provider
             json_login:
                 check_path: /login
                 username_path: email
                 password_path: password
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
+            guard:
+                authenticators:
+                    - lexik_jwt_authentication.jwt_token_authenticator
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -44,7 +38,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api/v1/users/create, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api/v1/^, roles: IS_AUTHENTICATED_FULLY }
-        - { path: ^/api/v1, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/users/create, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/docs, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/, roles: IS_AUTHENTICATED_FULLY }
         
